--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>ToolTip</title>
-    <script src="../src/App.js"></script>
+    <script src="/src/App.js"></script>
 
 </head>
 <body>
